--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
             </objects>
             <point key="canvasLocation" x="1505.5" y="-386.5"/>
         </scene>
-        <!--Routes Table View Controller-->
+        <!--Routes & Schedules-->
         <scene sceneID="ilf-lQ-GYl">
             <objects>
                 <tableViewController id="92j-Xj-7TV" customClass="RoutesTableViewController" customModule="Oxford_Brookes_Bus" customModuleProvider="target" sceneMemberID="viewController">
@@ -57,7 +57,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="AgS-Gx-w1E">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="AgS-Gx-w1E">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AgS-Gx-w1E" id="2jk-D1-LMM">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -72,12 +72,12 @@
                             <outlet property="delegate" destination="92j-Xj-7TV" id="Qlc-OH-e55"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="uMg-tZ-bBk"/>
+                    <navigationItem key="navigationItem" title="Routes &amp; Schedules" id="uMg-tZ-bBk"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eJv-43-3SG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1567.5" y="1373.5"/>
+            <point key="canvasLocation" x="1411.5" y="1382.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XEf-I3-qat">
@@ -111,17 +111,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JG7-Io-Sw3">
-                                <rect key="frame" x="288" y="66" width="50" height="50"/>
-                                <state key="normal" image="changeDirection.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="changeDirectionPressed:" destination="454-R7-6vy" eventType="touchUpInside" id="GlJ-ic-H8e"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
-                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="540" id="rac-aS-tD6"/>
@@ -160,7 +151,7 @@
                                             <outlet property="downImage" destination="YC6-N0-ITM" id="kDP-NZ-lXx"/>
                                             <outlet property="downTime" destination="QJ9-uk-L7x" id="cge-au-VfT"/>
                                             <outlet property="locationTitle" destination="e15-ad-RDl" id="a1U-nt-FL4"/>
-                                            <segue destination="TqT-WR-H09" kind="show" identifier="routeToTime" id="1R7-0W-dh9"/>
+                                            <segue destination="iAU-O2-yiV" kind="show" identifier="routeToTime" id="rgY-Ka-EJh"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -174,38 +165,59 @@
                                     <outlet property="delegate" destination="454-R7-6vy" id="QO7-T2-DcH"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JG7-Io-Sw3">
+                                <rect key="frame" x="309" y="72" width="35" height="50"/>
+                                <state key="normal" image="changeDirection.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="changeDirectionPressed:" destination="454-R7-6vy" eventType="touchUpInside" id="GlJ-ic-H8e"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="35G-Qt-AfN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="21" id="5zr-bt-LSh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="AIM-PV-1Gt"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="CXo-DT-LdJ"/>
+                            <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" constant="8" id="ENj-LJ-ZyT"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="JG7-Io-Sw3" secondAttribute="bottom" constant="8" id="ILb-jE-jlv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="Icm-l0-xAI"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="SEH-8j-C42" secondAttribute="topMargin" constant="20" id="KjN-bu-snh"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="bottom" secondItem="SEH-8j-C42" secondAttribute="bottomMargin" id="Rgs-Jv-aOX"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" constant="12" id="UQO-pC-aYe"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="Wjc-Io-59O"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="XCP-gl-xGt"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="ZHi-nH-ODF"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="bV5-LO-qAR"/>
                             <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" id="eum-h2-mZa"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="fLd-YD-Fqg"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="hgx-Dm-KeA"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="jeM-Nz-bZg"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="m6Q-w8-RAH"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="ngv-LP-O23"/>
+                            <constraint firstItem="JG7-Io-Sw3" firstAttribute="trailing" secondItem="SEH-8j-C42" secondAttribute="trailingMargin" id="qI1-Vz-7xD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="uxy-BL-GhT"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="35G-Qt-AfN"/>
+                                <exclude reference="CXo-DT-LdJ"/>
+                                <exclude reference="ILb-jE-jlv"/>
                                 <exclude reference="Icm-l0-xAI"/>
                                 <exclude reference="KjN-bu-snh"/>
                                 <exclude reference="Wjc-Io-59O"/>
+                                <exclude reference="XCP-gl-xGt"/>
                                 <exclude reference="bV5-LO-qAR"/>
                                 <exclude reference="fLd-YD-Fqg"/>
                                 <exclude reference="jeM-Nz-bZg"/>
                                 <exclude reference="m6Q-w8-RAH"/>
                                 <exclude reference="uxy-BL-GhT"/>
+                                <exclude reference="5zr-bt-LSh"/>
                                 <exclude reference="UQO-pC-aYe"/>
+                                <exclude reference="ngv-LP-O23"/>
+                                <exclude reference="eum-h2-mZa"/>
                             </mask>
                         </variation>
                     </view>
@@ -216,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q01-X7-QqX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2153.5" y="1245.5"/>
+            <point key="canvasLocation" x="1899.5" y="1391.5"/>
         </scene>
         <!--Times-->
         <scene sceneID="dUZ-Ls-zfp">
@@ -295,7 +307,7 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Times" id="Dan-fj-vuv">
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="YUQ-HO-gix">
+                        <barButtonItem key="leftBarButtonItem" id="YUQ-HO-gix">
                             <connections>
                                 <action selector="backPressed:" destination="TqT-WR-H09" id="e3O-TU-YH1"/>
                             </connections>
@@ -309,7 +321,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aRU-7C-eIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3250.5" y="989.5"/>
+            <point key="canvasLocation" x="2986.5" y="1293.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2QJ-VZ-aNs">
@@ -328,7 +340,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wu2-VE-Mcp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2624.5" y="1183.5"/>
+            <point key="canvasLocation" x="2398.5" y="1391.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9xU-ZA-lc2">
@@ -376,7 +388,4 @@
         <image name="changeDirection.png" width="100" height="100"/>
         <image name="pointingDown2.png" width="60" height="93"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="1R7-0W-dh9"/>
-    </inferredMetricsTieBreakers>
 </document>
